# rustyNES

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OpenAI_LLM.txt  README.md  build.rs
.github/workflows/: rust.yml
src/: apu.rs  cartridge.rs  controller.rs  cpu.rs  main.rs  memory.rs  nes.rs  nes_cpu.rs  ppu.rs  savestate.rs  util.rs
src/audio/: dsp.rs  mod.rs  output.rs
src/mappers/: mapper000.rs  mapper001.rs  mapper002.rs  mapper003.rs  mapper004.rs  mod.rs
src/ppu/: background.rs  mod.rs  palette.rs  sprites.rs
tests/: test_out.txt
