[package]
name = "rusty_nes"
version = "0.1.0"
edition = "2021"
authors = ["DoubleGate <parobek@gmail.com>"]
description = "rustyNES - Nintendo Entertainment System (NES) Emulator (Rust Language)"
repository = "https://github.com/doublegate/rustyNES"
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
sdl2 = "0.35"
anyhow = "1.0"
thiserror = "1.0"
windows = { version = "0.52", features = ["Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false

# [target.'cfg(target_os = "windows")'.build]
# rustflags = ["-L", "C:/vcpkg/installed/x64-windows/lib"]